# idf-duktape

./: CMakeLists.txt  readme.md  sdkconfig  sdkconfig.old
embedded_js/: init.js
main/: CMakeLists.txt  duk_source_meta.json  execute_js.c  execute_js.h  main.c  mqtt_task.c
main/ductape/: duk_config.h  duktape.c
ts/: bindings.d.ts  package-lock.json  package.json  tsconfig.json
ts/src/: index.ts
